crates/test-generator/tests/snapshots/rust/test_generated_reference_type.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let source2 = 42; let var7: &i32 = &source2;

AST:
(source_file
  (let_declaration
    pattern: (identifier "source2")
    value: (integer_literal "42")
  )
  (let_declaration
    pattern: (identifier "var7")
    type: (reference_type
      type: (primitive_type "i32")
    )
    value: (reference_expression
      value: (identifier "source2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "source2",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 12,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "var7",
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 27,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "source2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 37,
                end_line: 1,
                end_column: 44,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
