crates/test-generator/tests/snapshots/rust/test_generated_remaining_field_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
if let Type1 { .. } = value6 { }

AST:
(source_file
  (expression_statement
    (if_expression
      condition: (let_condition
        pattern: (struct_pattern
          type: (type_identifier "Type1")
          (remaining_field_pattern)
        )
        value: (identifier "value6")
      )
      consequence: (block)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "Type1",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 13,
            },
            context: None,
        },
        Usage {
            name: "value6",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 23,
                end_line: 1,
                end_column: 29,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
