crates/test-generator/tests/snapshots/rust/test_generated_removed_trait_bound.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test_fn9<T>(_: T) { }

AST:
(source_file
  (function_item
    name: (identifier "test_fn9")
    type_parameters: (type_parameters
      (type_parameter
        name: (type_identifier "T")
      )
    )
    parameters: (parameters
      (parameter
        type: (type_identifier "T")
      )
    )
    body: (block)
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:4 to 1:12 }, name: "test_fn9", definition_type: FunctionDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
        Definition { position: { 1:13 to 1:14 }, name: "T", definition_type: TypeDefinition, scope_id: Some(1), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:13 to 1:14 }, name: "T", kind: TypeIdentifier, context: None },
        Usage { position: { 1:19 to 1:20 }, name: "T", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
