crates/test-generator/tests/snapshots/rust/test_generated_scoped_identifier.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
std::collections::HashMap::new()

AST:
(source_file
  (expression_statement
    (call_expression
      function: (scoped_identifier "std::collections::HashMap::new"
        path: (scoped_identifier "std::collections::HashMap"
          path: (scoped_identifier "std::collections"
            path: (identifier "std")
            name: (identifier "collections")
          )
          name: (identifier "HashMap")
        )
        name: (identifier "new")
      )
      arguments: (arguments)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:4 }, name: "std", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:6 to 1:17 }, name: "collections", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:19 to 1:26 }, name: "HashMap", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:28 to 1:31 }, name: "new", kind: Identifier, context: Some("scoped_identifier") },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
