crates/test-generator/tests/snapshots/rust/test_generated_scoped_type_identifier.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var8: std::vec::Vec<i32> = vec![];

AST:
(source_file
  (let_declaration
    pattern: (identifier "var8")
    type: (generic_type
      type: (scoped_type_identifier "std::vec::Vec"
        path: (scoped_identifier "std::vec"
          path: (identifier "std")
          name: (identifier "vec")
        )
        name: (type_identifier "Vec")
      )
      type_arguments: (type_arguments
        (primitive_type "i32")
      )
    )
    value: (macro_invocation
      macro: (identifier "vec")
      (token_tree)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:5 to 1:9 }, name: "var8", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [
        Usage { position: { 1:11 to 1:14 }, name: "std", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:16 to 1:19 }, name: "vec", kind: Identifier, context: Some("scoped_identifier") },
        Usage { position: { 1:21 to 1:24 }, name: "Vec", kind: TypeIdentifier, context: Some("scoped_type_identifier") },
        Usage { position: { 1:32 to 1:35 }, name: "vec", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
