crates/test-generator/tests/snapshots/rust/test_generated_slice_pattern.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let [x13, ..] = [1, 2, 3];

AST:
(source_file
  (let_declaration
    pattern: (slice_pattern
      (identifier "x13")
      (remaining_field_pattern)
    )
    value: (array_expression
      (integer_literal "1")
      (integer_literal "2")
      (integer_literal "3")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition { position: { 1:6 to 1:9 }, name: "x13", definition_type: VariableDefinition, scope_id: Some(0), accessibility: Some(ScopeLocal), is_hoisted: Some(false) },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
