crates/test-generator/tests/snapshots/rust/test_generated_string_literal.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
let text = "test";

AST:
(source_file
  (let_declaration
    pattern: (identifier "text")
    value: (string_literal ""test""
      (string_content)
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "text",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
