crates/test-generator/tests/snapshots/rust/test_generated_struct_expression.snap
---
source: crates/test-generator/tests/rust.rs
expression: snapshot_content
---
Source Code:
TestStruct { field2: value7 };

AST:
(source_file
  (expression_statement
    (struct_expression
      name: (type_identifier "TestStruct")
      body: (field_initializer_list
        (field_initializer
          field: (field_identifier "field2")
          value: (identifier "value7")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:30 }, name: "TestStruct { field2: value7 }", kind: StructExpression, context: None },
        Usage { position: { 1:1 to 1:11 }, name: "TestStruct", kind: TypeIdentifier, context: None },
        Usage { position: { 1:14 to 1:20 }, name: "field2", kind: FieldInitializer, context: Some("field_initializer") },
        Usage { position: { 1:22 to 1:28 }, name: "value7", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
